--- a/miniapps/CMakeLists.txt
+++ b/miniapps/CMakeLists.txt
@@ -32,3 +32,4 @@ add_subdirectory(mtop)
 add_subdirectory(autodiff)
 add_subdirectory(parelag)
 add_subdirectory(hooke)
+add_subdirectory(nurbs_boundary_test)
