modified:   miniapps/CMakeLists.txt 	modified:   miniapps/nurbs_boundary_test/nurbs_bt.cpp 	miniapps/.vscode/ 	miniapps/nurbs_stokes/

--- a/miniapps/CMakeLists.txt
+++ b/miniapps/CMakeLists.txt
@@ -33,3 +33,4 @@ add_subdirectory(autodiff)
 add_subdirectory(parelag)
 add_subdirectory(hooke)
 add_subdirectory(nurbs_boundary_test)
+add_subdirectory(nurbs_stokes)
