new file:   .vscode/launch.json 	new file:   .vscode/tasks.json 	deleted:    mesh/beam-hex-nurbs-boundary-test.mesh 	deleted:    mesh/pipe-nurbs-boundary-test.mesh 	deleted:    mesh/pipe-nurbs-boundary-test_2.mesh 	deleted:    mesh/quad_nurbs.mesh 	modified:   miniapps/CMakeLists.txt 	modified:   miniapps/nurbs_stokes/nurbs_stokes.cpp 	new file:   miniapps/nurbs_stokes_poiseuille_flow/CMakeLists.txt 	new file:   miniapps/nurbs_stokes_poiseuille_flow/nurbs_stokes_poiseuille_flow.cpp

--- a/miniapps/CMakeLists.txt
+++ b/miniapps/CMakeLists.txt
@@ -35,3 +35,4 @@ add_subdirectory(parelag)
 add_subdirectory(hooke)
 add_subdirectory(nurbs_boundary_test)
 add_subdirectory(nurbs_stokes)
+add_subdirectory(nurbs_stokes_poiseuille_flow)
