--- a/miniapps/CMakeLists.txt
+++ b/miniapps/CMakeLists.txt
@@ -36,3 +36,4 @@ add_subdirectory(hooke)
 add_subdirectory(nurbs_boundary_test)
 add_subdirectory(nurbs_stokes)
 add_subdirectory(nurbs_stokes_poiseuille_flow)
+add_subdirectory(nurbs_stokes_weak_bc)
