modified:   miniapps/CMakeLists.txt 	modified:   miniapps/nurbs_stokes/CMakeLists.txt 	modified:   miniapps/nurbs_stokes/nurbs_stokes.cpp 	deleted:    miniapps/nurbs_stokes_poiseuille_flow/CMakeLists.txt 	deleted:    miniapps/nurbs_stokes_poiseuille_flow/nurbs_stokes_poiseuille_flow.cpp 	deleted:    miniapps/nurbs_stokes_weak_bc/CMakeLists.txt 	deleted:    miniapps/nurbs_stokes_weak_bc/nurbs_stokes_weak_bc.cpp 	deleted:    miniapps/nurbs_stokes_weak_bc/nurbs_stokes_weak_bc.hpp 	miniapps/nurbs_stokes_poiseuille_flow_test/ 	miniapps/nurbs_stokes_test/ 	miniapps/nurbs_stokes_weak_bc_test/

--- a/miniapps/nurbs_stokes/CMakeLists.txt
+++ b/miniapps/nurbs_stokes/CMakeLists.txt
@@ -15,8 +15,8 @@ add_mfem_miniapp(
   LIBRARIES mfem)
 
 if (MFEM_ENABLE_TESTING)
-  add_test(NAME nurbs_stokes_per_ser
-    COMMAND $<TARGET_FILE:nurbs_stokes> -no-vis
-    -m ${PROJECT_SOURCE_DIR}/mesh/pipe-nurbs-boundary-test_2.mesh)
+#  add_test(NAME nurbs_stokes_per_ser
+#    COMMAND $<TARGET_FILE:nurbs_stokes> -no-vis
+#    -m ${PROJECT_SOURCE_DIR}/mesh/pipe-nurbs-boundary-test_2.mesh)
 endif()
 
