--- a/miniapps/CMakeLists.txt
+++ b/miniapps/CMakeLists.txt
@@ -34,6 +34,7 @@ add_subdirectory(autodiff)
 add_subdirectory(parelag)
 add_subdirectory(hooke)
 add_subdirectory(nurbs_boundary_test)
+add_subdirectory(nurbs_stokes_test)
+add_subdirectory(nurbs_stokes_poiseuille_flow_test)
+add_subdirectory(nurbs_stokes_weak_bc_test)
 add_subdirectory(nurbs_stokes)
-add_subdirectory(nurbs_stokes_poiseuille_flow)
-add_subdirectory(nurbs_stokes_weak_bc)
