--- a/miniapps/CMakeLists.txt
+++ b/miniapps/CMakeLists.txt
@@ -40,4 +40,4 @@ add_subdirectory(nurbs_stokes_weak_bc_test)
 add_subdirectory(nurbs_stokes)
 add_subdirectory(nurbs_stokes_weak_bc_test2)
 add_subdirectory(nurbs_stokes_with_temperature)
-add_subdirectory(nurbs_stokes_with_temperature_2)
+#add_subdirectory(nurbs_stokes_with_temperature_2)
