modified:   miniapps/nurbs_stokes/CMakeLists.txt 	modified:   miniapps/nurbs_stokes/nurbs_stokes.cpp 	modified:   miniapps/nurbs_stokes/nurbs_stokes_solver.cpp 	modified:   miniapps/nurbs_stokes/nurbs_stokes_solver.hpp 	new file:   miniapps/nurbs_stokes/viscosity_models.cpp 	new file:   miniapps/nurbs_stokes/viscosity_models.hpp

--- a/miniapps/nurbs_stokes/CMakeLists.txt
+++ b/miniapps/nurbs_stokes/CMakeLists.txt
@@ -14,6 +14,8 @@ add_mfem_miniapp(
   MAIN nurbs_stokes.cpp
   nurbs_stokes_solver.cpp
   nurbs_stokes_solver.hpp
+  viscosity_models.cpp
+  viscosity_models.hpp
   LIBRARIES mfem)
 
 if (MFEM_ENABLE_TESTING)
