modified:   miniapps/.vscode/settings.json 	modified:   miniapps/CMakeLists.txt 	modified:   miniapps/nurbs_stokes/CMakeLists.txt 	deleted:    miniapps/nurbs_stokes/nurbs_stokes_backup.cpp 	modified:   miniapps/nurbs_stokes/nurbs_stokes_solver.cpp 	deleted:    miniapps/nurbs_stokesp/CMakeLists.txt 	deleted:    miniapps/nurbs_stokesp/nurbs_stokes_solverp.cpp 	deleted:    miniapps/nurbs_stokesp/nurbs_stokes_solverp.hpp 	deleted:    miniapps/nurbs_stokesp/nurbs_stokesp.cpp 	config/user.cmake 	miniapps/nurbs_stokes/nurbs_stokes_solverp.cpp 	miniapps/nurbs_stokes/nurbs_stokes_solverp.hpp 	miniapps/nurbs_stokes/nurbs_stokesp.cpp 	miniapps/nurbs_stokes/viscosity_modelsp.cpp 	miniapps/nurbs_stokes/viscosity_modelsp.hpp

--- a/miniapps/nurbs_stokes/CMakeLists.txt
+++ b/miniapps/nurbs_stokes/CMakeLists.txt
@@ -24,3 +24,12 @@ if (MFEM_ENABLE_TESTING)
 #    -m ${PROJECT_SOURCE_DIR}/mesh/pipe-nurbs-boundary-test_2.mesh)
 endif()
 
+if (MFEM_USE_MPI)
+  add_mfem_miniapp(nurbs_stokesp
+  MAIN nurbs_stokesp.cpp
+  nurbs_stokes_solverp.cpp
+  nurbs_stokes_solverp.hpp
+  viscosity_modelsp.cpp
+  viscosity_modelsp.hpp
+  LIBRARIES mfem)
+endif()
