modified:   miniapps/nurbs_stokes_fsi/CMakeLists.txt 	new file:   miniapps/nurbs_stokes_fsi/interfacecoefficient.cpp new file:   miniapps/nurbs_stokes_fsi/interfacecoefficient.hpp 	modified:   miniapps/nurbs_stokes_fsi/nurbs_stokes_fsi.cpp 	modified:   miniapps/nurbs_stokes_fsi/nurbs_stokes_fsi_solver.cpp 	modified:   miniapps/nurbs_stokes_fsi/nurbs_stokes_fsi_solver.hpp

--- a/miniapps/nurbs_stokes_fsi/CMakeLists.txt
+++ b/miniapps/nurbs_stokes_fsi/CMakeLists.txt
@@ -16,6 +16,8 @@ add_mfem_miniapp(
   nurbs_stokes_fsi_solver.hpp
   viscosity_models.cpp
   viscosity_models.hpp
+  interfacecoefficient.cpp
+  interfacecoefficient.hpp
   LIBRARIES mfem)
 
 if (MFEM_ENABLE_TESTING)
