modified:   miniapps/CMakeLists.txt 	modified:   miniapps/nurbs_stokes_fsi/nurbs_stokes_fsi_solver.cpp 	new file:   miniapps/nurbs_stokes_fsi_p/CMakeLists.txt 	new file:   miniapps/nurbs_stokes_fsi_p/interfacecoefficient.cpp 	new file:   miniapps/nurbs_stokes_fsi_p/interfacecoefficient.hpp 	new file:   miniapps/nurbs_stokes_fsi_p/nurbs_stokes_fsi.cpp 	new file:   miniapps/nurbs_stokes_fsi_p/nurbs_stokes_fsi_solver.cpp 	new file:   miniapps/nurbs_stokes_fsi_p/nurbs_stokes_fsi_solver.hpp 	new file:   miniapps/nurbs_stokes_fsi_p/viscosity_models.cpp 	new file:   miniapps/nurbs_stokes_fsi_p/viscosity_models.hpp

--- a/miniapps/CMakeLists.txt
+++ b/miniapps/CMakeLists.txt
@@ -39,6 +39,7 @@ add_subdirectory(nurbs_stokes_poiseuille_flow_test)
 add_subdirectory(nurbs_stokes_weak_bc_test)
 add_subdirectory(nurbs_stokes)
 add_subdirectory(nurbs_stokes_fsi)
+add_subdirectory(nurbs_stokes_fsi_p)
 add_subdirectory(nurbs_stokes_weak_bc_test2)
 add_subdirectory(nurbs_stokes_with_temperature)
 #add_subdirectory(nurbs_stokes_with_temperature_2)
